aggiorna libreria standard